--- a/src/Style.css
+++ b/src/Style.css
@@ -1,3 +1,17 @@
 .selectedNode {
   r: 10;
 }
+.links line {
+  stroke: #999;
+  stroke-opacity: 0.6;
+}
+
+.nodes circle {
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+text {
+  stroke: #fff;
+  stroke-width: 1.5px;
+  paint-order: stroke fill;
+}
